# msp430

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  aliases.sh  compile.sh  debug.sh  flash.sh  platformio.ini
samples/: Makefile  bluetooth.c  i2c.c  i2c.h  led.c  led.h  main.c  main.c.bkp  main.c.bkp2  servo.c  servo.h  uart.c  uart.h
src/: hardware.h  led.cpp  led.h  main.cpp  pwm.cpp  pwm.h  servo.cpp  servo.h  uart.cpp  uart.h
src/headers/: button.h  led.h  servo.h
src/include/: servo.h
src/source/: main.c  servo.c
src/sources/: button.c  led.c  main.c  servo.c
